@@ -4,6 +4,9 @@ Changelog
 2.1.2 (Unreleased)
 ------------------
 
+- Use DateTime's built-in support to do `datetime.datetime` conversions.
+  [hannosch]
+
 - Fixed `atdocument` tests to be compatible with Archetypes 1.7.5.
   [hannosch]
 
